@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.560 2006/02/07 22:29:18 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.561 2006/02/08 03:25:24 wolf31o2 Exp $
+
+  08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
+  targets/support/livecdfs-update.sh:
+  Rearranged generation of /usr/livecd/systempkgs.txt for the LiveCD. Thanks
+  to Andrew Gaffney for spotting this.
 
   07 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/support/kmerge.sh:
